# goit-pythonweb-hw-10

./: .dockerignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 62ecc938a1a1_initial.py
src/: config.py  crud.py  database.py  models.py  schemas.py
src/api/: auth.py  contacts.py  users.py  utils.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/schemas/: contact.py  user.py
src/services/: auth.py  email.py  upload_file.py  users.py
